# neocash

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
benches/: benchmarks.rs
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  prompt.rs  version.rs
src/completion/: completer.rs  menu.rs  mod.rs
src/neocash-1.0.1/src/completion/: mod.rs
